--- a/style.css
+++ b/style.css
@@ -74,7 +74,11 @@ li:hover {
 }
 
 .calendar-main tbody tr {
-    font-weight: 500;
+  font-weight: 500;
+}
+
+.calendar-main tbody tr td:first-child {
+  font-weight: 600;
 }
 
 table {
@@ -111,6 +115,7 @@ td.row-date {
 td.row-tournament {
   width: 50%;
 }
+
 
 footer {
   background-color: #101926;
